# 381706-2_gavriushova_table

./: .travis.yml  CMakeLists.txt  Otchet.doc  README.md
tables/: CMakeLists.txt  TableS_main.cpp
tableslib/: CMakeLists.txt  TElem.cpp  TElem.h  TableS.h
tablestest/: CMakeLists.txt  TableSTest.cpp  TableSTest_main.cpp  test_main.cpp
