cmake_minimum_required(VERSION 2.8) #???????? ?????? CMake.

set(PROJECT_NAME 381706-2_gavriushova_table) #??????? ??????? ????????? ?????????? ? ?????? ???????
project(${PROJECT_NAME}) # ???????? ???????

set(tables tables)
set(tableslib tableslib)
set(tablestest tablestest)


set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) #????????? ?????????? CMAKE_CONFIGURATION_TYPES ?? ????????? "Debug;Release" ? ??????/???????? Configs, ?????????? ??????????? ? ??????????? ????? ????????? ?? ???? ??????,
if(NOT CMAKE_BUILD_TYPE) # ???????? ????????? ? ??????????? ????????? ??????
  set(CMAKE_BUILD_TYPE Release) #???? ??? ?? ????????????? Release
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tableslib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gtest)



add_subdirectory(tables)
add_subdirectory(tableslib)
add_subdirectory(tablestest)
add_subdirectory(gtest)


file(GLOB hdrs "*.h*") #????????? ? ?????????? hdrs ??? ????? ? ??????????? .h
file(GLOB srcs "*.cpp") #????????? ? ?????????? srcs ??? ????? ? ??????????? .h
